# query_zafran

./: CLAUDE.md  Makefile  PATTERNS.md  README.md  TESTING.md  client.py  main.py  output.py  pyproject.toml  qz.py  requirements.txt  store.py
.claude/: settings.local.json
.github/workflows/: ci.yml
examples/: paginated_search.py
template_cli/: __main__.py  client.py  main.py  parser.py
test/integration/: test_main.py
test/unit/: test_cli.py  test_client.py  test_output.py  test_parser.py  test_store.py
